Created Email Utility.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,11 @@ spring.mvc.view.suffix=.jsp
 server.port=9090
 server.servlet.context-path=/FlightReservation
 
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=sharaddhumal840
+spring.mail.password=Asharad@143
+
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.properties.mail.smtp.auth=true
