Added all remailning functionality like security, pass encryption,mail,pdf

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,7 @@ spring.mail.password=Asharad@143
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
 spring.mail.properties.mail.smtp.auth=true
+
+com.sharad.flightreservation.itinerary.dirpath=D:\\reservation
+com.sharad.flightreservation.itinerary.email.body=Please find the your Itinerary attached.
+com.sharad.flightreservation.itinerary.email.subject=Itinerary for the Flights.
